# IMAR-C

./: README.md
include/: imbdd.h  naodensetrack.h  naomngt.h  naosvm.h  svm.h
lib/libsvm-3.17/: svm.cpp
main/: Makefile  README  main.cpp
main/bdd/: imconfig.xml(example)
nao/recordVideoLocal/: CMakeLists.txt  main.cpp  reartactil.cpp  reartactil.h
nao/visionAction/: CMakeLists.txt  integration.cpp  tactil.cpp
src/: imbdd.cpp  naokmeans.cpp  naomngt.cpp  naosvm.cpp
tools/decreaseSize/: Makefile  main.cpp
tools/detectFps/: Makefile  main.cpp
